--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body{
 }
 .app{
   display:grid;
-  grid-template-columns:300px 1fr;
+  grid-template-columns:320px 1fr;
   min-height:100vh;
 }
 .sidebar{
@@ -31,20 +31,14 @@ body{
   padding:20px;
 }
 .sidebar h2{margin-top:0}
-.side-card{
+.menu-item{
   background:rgba(255,255,255,0.12);
   border-radius:10px;
-  padding:12px;
-  margin-bottom:15px;
-}
-.side-item{
-  background:rgba(255,255,255,0.12);
-  border-radius:8px;
   padding:10px;
   margin-bottom:10px;
   cursor:pointer;
 }
-.side-item:hover{background:rgba(255,255,255,0.2)}
+.menu-item:hover{background:rgba(255,255,255,0.22)}
 
 .main{
   padding:30px;
@@ -96,7 +90,7 @@ th{background:#f1f5f9}
   padding:10px;
   text-align:center;
 }
-.big{font-size:1.1em;font-weight:700}
+.big{font-weight:700}
 .green{color:#16a34a}
 .red{color:#dc2626}
 </style>
@@ -107,16 +101,8 @@ th{background:#f1f5f9}
 
   <!-- SIDEBAR -->
   <div class="sidebar">
-    <h2>📊 Ringkasan</h2>
-
-    <div class="side-card">
-      <b>Total Semua Karyawan</b><br><br>
-      Jam: <b id="grandJam">0</b><br>
-      Gaji: <b id="grandGaji">Rp 0</b>
-    </div>
-
-    <h3>👷 Per Karyawan</h3>
-    <div id="sideList"></div>
+    <h2>📋 Ringkasan Karyawan</h2>
+    <div id="menuKaryawan"></div>
   </div>
 
   <!-- MAIN -->
@@ -139,7 +125,7 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 const hari=["Minggu","Senin","Selasa","Rabu","Kamis","Jumat","Sabtu"];
 const list=document.getElementById("list");
-const side=document.getElementById("sideList");
+const menu=document.getElementById("menuKaryawan");
 
 function ddmmyy(d){
   return String(d.getDate()).padStart(2,'0')+'-'+
@@ -210,16 +196,14 @@ function tambahKaryawan(nama){
       <div class="sum-box">Gaji Bersih<br><span class="big green gb">Rp 0</span></div>
     </div>
   `;
-  d.querySelector(".hapus").onclick=()=>{d.remove(); renderSidebar()};
+  d.querySelector(".hapus").onclick=()=>{d.remove(); renderMenu()};
   list.appendChild(d);
   refreshTanggal();
-  renderSidebar();
+  renderMenu();
   hitung();
 }
 
 function hitung(){
-  let grandJam=0, grandGaji=0;
-
   document.querySelectorAll(".karyawan").forEach(k=>{
     let jamTot=0, tunj=0;
     const gj=+k.querySelector(".gaji").value||0;
@@ -244,32 +228,25 @@ function hitung(){
     });
 
     const gaji=(jamTot*gj)+tunj-kb;
-
     k.querySelector(".jb").innerText=jamTot.toFixed(2);
     k.querySelector(".tm").innerText="Rp "+tunj.toLocaleString();
     k.querySelector(".kb").innerText="Rp "+kb.toLocaleString();
     k.querySelector(".gb").innerText="Rp "+gaji.toLocaleString();
-
-    grandJam+=jamTot;
-    grandGaji+=gaji;
   });
-
-  document.getElementById("grandJam").innerText=grandJam.toFixed(2);
-  document.getElementById("grandGaji").innerText="Rp "+grandGaji.toLocaleString();
-  renderSidebar();
+  renderMenu();
 }
 
-function renderSidebar(){
-  side.innerHTML="";
+function renderMenu(){
+  menu.innerHTML="";
   document.querySelectorAll(".karyawan").forEach(k=>{
     const nama=k.querySelector(".nama").value;
     const jam=k.querySelector(".jb").innerText;
     const gaji=k.querySelector(".gb").innerText;
-    const div=document.createElement("div");
-    div.className="side-item";
-    div.innerHTML=`<b>${nama}</b><br>${jam} jam<br>${gaji}`;
-    div.onclick=()=>k.scrollIntoView({behavior:"smooth"});
-    side.appendChild(div);
+    const item=document.createElement("div");
+    item.className="menu-item";
+    item.innerHTML=`<b>${nama}</b><br>Total Jam: ${jam}<br>Gaji: ${gaji}`;
+    item.onclick=()=>k.scrollIntoView({behavior:"smooth"});
+    menu.appendChild(item);
   });
 }
 
