--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   --bg2:#020617;
   --card:#ffffff;
   --accent:#3b82f6;
+  --danger:#dc2626;
   --text:#0f172a;
 }
 *{box-sizing:border-box}
@@ -21,7 +22,7 @@ body{
 }
 .app{
   display:grid;
-  grid-template-columns:300px 1fr;
+  grid-template-columns:320px 1fr;
   min-height:100vh;
 }
 .sidebar{
@@ -51,9 +52,24 @@ body{
   margin-bottom:25px;
   box-shadow:0 20px 40px rgba(0,0,0,.3);
 }
+h1,h2{margin-top:0}
+input{
+  width:100%;
+  padding:6px;
+}
+button{
+  padding:8px 14px;
+  border:none;
+  border-radius:10px;
+  background:var(--accent);
+  color:white;
+  cursor:pointer;
+}
+button.hapus{background:var(--danger)}
 table{
   width:100%;
   border-collapse:collapse;
+  margin-top:10px;
 }
 th,td{
   border:1px solid #e5e7eb;
@@ -61,9 +77,10 @@ th,td{
   text-align:center;
 }
 th{background:#f1f5f9}
-input{width:100%;padding:5px}
-.jamnum{width:60px;text-align:center}
-h1,h2{margin-top:0}
+.jamnum{width:55px;text-align:center}
+.readonly{
+  background:#e5e7eb;
+}
 </style>
 </head>
 
@@ -72,11 +89,6 @@ h1,h2{margin-top:0}
 
   <!-- SIDEBAR -->
   <div class="sidebar">
-    <h2>📋 Ringkasan Total Karyawan</h2>
-    <div id="menuKaryawan"></div>
-
-    <hr style="opacity:.3">
-
     <div class="menu active" id="btnPayroll">💰 PAYROLL</div>
     <div class="menu" id="btnAbsen">🕒 ABSEN</div>
   </div>
@@ -93,52 +105,73 @@ h1,h2{margin-top:0}
 document.addEventListener("DOMContentLoaded",()=>{
 
 const hari=["Minggu","Senin","Selasa","Rabu","Kamis","Jumat","Sabtu"];
-const menuKaryawan=document.getElementById("menuKaryawan");
 const pagePayroll=document.getElementById("pagePayroll");
 const pageAbsen=document.getElementById("pageAbsen");
 
-let karyawan=[];
+let data=[];
 
-// INIT DATA
+// ===== INIT DATA =====
 for(let i=1;i<=3;i++){
-  karyawan.push({
+  data.push({
     nama:"Karyawan "+i,
-    data:[...Array(14)].map((_,d)=>({
-      masuk:"",
-      keluar:"",
-      tanggal:d
+    hari:[...Array(14)].map(()=>({
+      jm:"", mm:"", jk:"", mk:""
     }))
   });
 }
 
-// PAGE PAYROLL (ringkas saja)
+// ===== PAYROLL PAGE =====
 function renderPayroll(){
-  pagePayroll.innerHTML=`<h1>PT ATMB<br><small>Payroll</small></h1>`;
-  menuKaryawan.innerHTML="";
+  pagePayroll.innerHTML=`<h1>PT ATMB<br><small>PAYROLL</small></h1>
+  <button onclick="tambah()">+ Tambah Karyawan</button><br><br>`;
 
-  karyawan.forEach((k,i)=>{
-    const div=document.createElement("div");
-    div.className="menu";
-    div.innerHTML=`<b>${k.nama}</b><br>Total Jam: 0<br>Total Gaji: Rp 0`;
-    menuKaryawan.appendChild(div);
-  });
-}
-
-// PAGE ABSEN
-function renderAbsen(){
-  pageAbsen.innerHTML=`<h1>PT ATMB<br><small>ABSEN</small></h1>`;
-
-  karyawan.forEach(k=>{
+  data.forEach((k,ki)=>{
     let t=`<div class="card">
       <h2>${k.nama}</h2>
       <table>
-        <tr><th>Hari</th><th>Jam Masuk</th><th>Jam Keluar</th></tr>`;
-    k.data.forEach((d,i)=>{
+      <tr>
+        <th>Hari</th>
+        <th colspan="2">Masuk</th>
+        <th colspan="2">Keluar</th>
+      </tr>`;
+    k.hari.forEach((h,hi)=>{
       t+=`
       <tr>
-        <td>${hari[i%7]}</td>
-        <td><input class="jamnum"></td>
-        <td><input class="jamnum"></td>
+        <td>${hari[hi%7]}</td>
+        <td><input class="jamnum" value="${h.jm}"
+          oninput="ubah(${ki},${hi},'jm',this.value)"></td>
+        <td><input class="jamnum" value="${h.mm}"
+          oninput="ubah(${ki},${hi},'mm',this.value)"></td>
+        <td><input class="jamnum" value="${h.jk}"
+          oninput="ubah(${ki},${hi},'jk',this.value)"></td>
+        <td><input class="jamnum" value="${h.mk}"
+          oninput="ubah(${ki},${hi},'mk',this.value)"></td>
+      </tr>`;
+    });
+    t+=`</table></div>`;
+    pagePayroll.innerHTML+=t;
+  });
+}
+
+// ===== ABSEN PAGE (READ ONLY) =====
+function renderAbsen(){
+  pageAbsen.innerHTML=`<h1>PT ATMB<br><small>ABSEN</small></h1>`;
+
+  data.forEach(k=>{
+    let t=`<div class="card">
+      <h2>${k.nama}</h2>
+      <table>
+      <tr>
+        <th>Hari</th>
+        <th>Jam Masuk</th>
+        <th>Jam Keluar</th>
+      </tr>`;
+    k.hari.forEach((h,hi)=>{
+      t+=`
+      <tr>
+        <td>${hari[hi%7]}</td>
+        <td><input class="readonly" value="${h.jm}:${h.mm}" readonly></td>
+        <td><input class="readonly" value="${h.jk}:${h.mk}" readonly></td>
       </tr>`;
     });
     t+=`</table></div>`;
@@ -146,19 +179,34 @@ function renderAbsen(){
   });
 }
 
-// MENU SWITCH
+// ===== DATA SYNC =====
+window.ubah=function(k,h,f,v){
+  data[k].hari[h][f]=v;
+  renderAbsen(); // langsung update ABSEN
+};
+
+// ===== MENU SWITCH =====
 btnPayroll.onclick=()=>{
   pagePayroll.style.display="block";
   pageAbsen.style.display="none";
   btnPayroll.classList.add("active");
   btnAbsen.classList.remove("active");
 };
-
 btnAbsen.onclick=()=>{
   pagePayroll.style.display="none";
   pageAbsen.style.display="block";
   btnAbsen.classList.add("active");
   btnPayroll.classList.remove("active");
+};
+
+// ===== ADD KARYAWAN =====
+window.tambah=function(){
+  data.push({
+    nama:"Karyawan "+(data.length+1),
+    hari:[...Array(14)].map(()=>({jm:"",mm:"",jk:"",mk:""}))
+  });
+  renderPayroll();
+  renderAbsen();
 };
 
 renderPayroll();
