--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>PT ATMB - Payroll & Absen</title>
+<title>PT ATMB - Payroll</title>
 
 <style>
 :root{
@@ -22,23 +22,29 @@ body{
 }
 .app{
   display:grid;
-  grid-template-columns:320px 1fr;
+  grid-template-columns:340px 1fr;
   min-height:100vh;
 }
 .sidebar{
   background:rgba(255,255,255,0.06);
   backdrop-filter:blur(10px);
   padding:20px;
+  overflow:auto;
 }
-.menu{
+.sidebar h2{
+  margin-top:0;
+  margin-bottom:12px;
+}
+.menu-item{
   background:rgba(255,255,255,0.12);
   border-radius:12px;
   padding:12px;
   margin-bottom:10px;
-  cursor:pointer;
 }
-.menu:hover{background:rgba(255,255,255,0.22)}
-.menu.active{outline:2px solid var(--accent)}
+.menu-item.clickable{cursor:pointer}
+.menu-item.clickable:hover{
+  background:rgba(255,255,255,0.22);
+}
 
 .main{
   padding:30px;
@@ -49,10 +55,10 @@ body{
   color:var(--text);
   border-radius:16px;
   padding:20px;
-  margin-bottom:25px;
+  margin-bottom:30px;
   box-shadow:0 20px 40px rgba(0,0,0,.3);
 }
-h1,h2{margin-top:0}
+h1{margin-top:0}
 input{
   width:100%;
   padding:6px;
@@ -78,9 +84,22 @@ th,td{
 }
 th{background:#f1f5f9}
 .jamnum{width:55px;text-align:center}
-.readonly{
-  background:#e5e7eb;
+.summary{
+  display:grid;
+  grid-template-columns:repeat(4,1fr);
+  gap:10px;
+  margin-top:15px;
 }
+.sum-box{
+  background:#f8fafc;
+  border-radius:12px;
+  padding:10px;
+  text-align:center;
+}
+.big{font-weight:700}
+.green{color:#16a34a}
+.red{color:#dc2626}
+hr{border:none;border-top:1px solid rgba(255,255,255,.25);margin:18px 0}
 </style>
 </head>
 
@@ -89,14 +108,26 @@ th{background:#f1f5f9}
 
   <!-- SIDEBAR -->
   <div class="sidebar">
-    <div class="menu active" id="btnPayroll">💰 PAYROLL</div>
-    <div class="menu" id="btnAbsen">🕒 ABSEN</div>
+    <h2>📋 Ringkasan Total Karyawan</h2>
+    <div id="menuKaryawan"></div>
+
+    <hr>
+
+    <h2>📊 Ringkasan Total</h2>
+    <div id="menuTotal"></div>
   </div>
 
   <!-- MAIN -->
   <div class="main">
-    <div id="pagePayroll"></div>
-    <div id="pageAbsen" style="display:none"></div>
+    <h1>PT ATMB<br><small>Payroll 2 Minggu</small></h1>
+
+    <div class="card">
+      Tanggal Mulai
+      <input type="date" id="tanggalMulai"><br><br>
+      <button id="btnTambah">+ Tambah Karyawan</button>
+    </div>
+
+    <div id="list"></div>
   </div>
 
 </div>
@@ -105,112 +136,149 @@ th{background:#f1f5f9}
 document.addEventListener("DOMContentLoaded",()=>{
 
 const hari=["Minggu","Senin","Selasa","Rabu","Kamis","Jumat","Sabtu"];
-const pagePayroll=document.getElementById("pagePayroll");
-const pageAbsen=document.getElementById("pageAbsen");
+const list=document.getElementById("list");
+const menu=document.getElementById("menuKaryawan");
+const menuTotal=document.getElementById("menuTotal");
 
-let data=[];
+function ddmmyy(d){
+  return String(d.getDate()).padStart(2,'0')+'-'+
+         String(d.getMonth()+1).padStart(2,'0')+'-'+
+         String(d.getFullYear()).slice(-2);
+}
+function menit(j,m){
+  j=Number(j); m=Number(m);
+  if(isNaN(j)||isNaN(m)||m>59||j<0) return null;
+  return j*60+m;
+}
+function tabel(){
+  let t=`<table>
+  <tr>
+    <th>Tgl</th><th>Hari</th>
+    <th colspan="2">Masuk</th>
+    <th colspan="2">Pulang</th>
+    <th>Istirahat</th>
+    <th>x2</th>
+    <th>Jam Bersih</th>
+  </tr>`;
+  for(let i=0;i<14;i++){
+    t+=`
+    <tr data-i="${i}">
+      <td class="tgl"></td>
+      <td class="hari"></td>
+      <td><input class="jamnum jm"></td>
+      <td><input class="jamnum mm"></td>
+      <td><input class="jamnum jk"></td>
+      <td><input class="jamnum mk"></td>
+      <td><input class="jamnum rest" value="0"></td>
+      <td><input type="checkbox" class="x2"></td>
+      <td class="bersih">0</td>
+    </tr>`;
+  }
+  return t+"</table>";
+}
 
-// ===== INIT DATA =====
-for(let i=1;i<=3;i++){
-  data.push({
-    nama:"Karyawan "+i,
-    hari:[...Array(14)].map(()=>({
-      jm:"", mm:"", jk:"", mk:""
-    }))
+function refreshTanggal(){
+  const s=tanggalMulai.value;
+  document.querySelectorAll('[data-i]').forEach(r=>{
+    const d=new Date(s);
+    d.setDate(d.getDate()+Number(r.dataset.i));
+    r.querySelector('.tgl').innerText=ddmmyy(d);
+    r.querySelector('.hari').innerText=hari[d.getDay()];
   });
 }
 
-// ===== PAYROLL PAGE =====
-function renderPayroll(){
-  pagePayroll.innerHTML=`<h1>PT ATMB<br><small>PAYROLL</small></h1>
-  <button onclick="tambah()">+ Tambah Karyawan</button><br><br>`;
+function tambahKaryawan(nama){
+  const d=document.createElement("div");
+  d.className="card karyawan";
 
-  data.forEach((k,ki)=>{
-    let t=`<div class="card">
-      <h2>${k.nama}</h2>
-      <table>
-      <tr>
-        <th>Hari</th>
-        <th colspan="2">Masuk</th>
-        <th colspan="2">Keluar</th>
-      </tr>`;
-    k.hari.forEach((h,hi)=>{
-      t+=`
-      <tr>
-        <td>${hari[hi%7]}</td>
-        <td><input class="jamnum" value="${h.jm}"
-          oninput="ubah(${ki},${hi},'jm',this.value)"></td>
-        <td><input class="jamnum" value="${h.mm}"
-          oninput="ubah(${ki},${hi},'mm',this.value)"></td>
-        <td><input class="jamnum" value="${h.jk}"
-          oninput="ubah(${ki},${hi},'jk',this.value)"></td>
-        <td><input class="jamnum" value="${h.mk}"
-          oninput="ubah(${ki},${hi},'mk',this.value)"></td>
-      </tr>`;
+  d.innerHTML=`
+    <b>Nama Karyawan</b>
+    <input class="nama" value="${nama}">
+    <button class="hapus">Hapus</button><br><br>
+
+    Gaji/Jam <input class="gaji" type="number" value="20000">
+    Tunjangan/Hari <input class="makan" type="number" value="15000">
+    Kasbon <input class="kasbon red" type="number" value="0">
+
+    ${tabel()}
+
+    <div class="summary">
+      <div class="sum-box">Total Jam<br><span class="big jb">0</span></div>
+      <div class="sum-box">Tunjangan<br><span class="big green tm">Rp 0</span></div>
+      <div class="sum-box">Kasbon<br><span class="big red kb">Rp 0</span></div>
+      <div class="sum-box">Total Gaji<br><span class="big green gb">Rp 0</span></div>
+    </div>
+  `;
+  d.querySelector(".hapus").onclick=()=>{d.remove(); renderMenu()};
+  list.appendChild(d);
+  refreshTanggal();
+  renderMenu();
+  hitung();
+}
+
+function hitung(){
+  document.querySelectorAll(".karyawan").forEach(k=>{
+    let jamTot=0, tunj=0;
+    const gj=+k.querySelector(".gaji").value||0;
+    const mkn=+k.querySelector(".makan").value||0;
+    const kb=+k.querySelector(".kasbon").value||0;
+
+    k.querySelectorAll("[data-i]").forEach(r=>{
+      let m1=menit(r.querySelector(".jm").value,r.querySelector(".mm").value);
+      let m2=menit(r.querySelector(".jk").value,r.querySelector(".mk").value);
+      let rest=+r.querySelector(".rest").value||0;
+      let x2=r.querySelector(".x2").checked;
+
+      let bersih=0;
+      if(m1!==null && m2!==null){
+        bersih=((m2-m1)/60)-rest;
+        if(bersih<0) bersih=0;
+        if(x2) bersih*=2;
+        jamTot+=bersih;
+        tunj+=bersih>0?mkn:0;
+      }
+      r.querySelector(".bersih").innerText=bersih.toFixed(2);
     });
-    t+=`</table></div>`;
-    pagePayroll.innerHTML+=t;
+
+    const gaji=(jamTot*gj)+tunj-kb;
+    k.querySelector(".jb").innerText=jamTot.toFixed(2);
+    k.querySelector(".tm").innerText="Rp "+tunj.toLocaleString();
+    k.querySelector(".kb").innerText="Rp "+kb.toLocaleString();
+    k.querySelector(".gb").innerText="Rp "+gaji.toLocaleString();
+  });
+  renderMenu();
+}
+
+function renderMenu(){
+  menu.innerHTML="";
+  menuTotal.innerHTML="";
+
+  document.querySelectorAll(".karyawan").forEach(k=>{
+    const nama=k.querySelector(".nama").value;
+    const jam=k.querySelector(".jb").innerText;
+    const gaji=k.querySelector(".gb").innerText;
+
+    // MENU ATAS (NAVIGASI)
+    const item=document.createElement("div");
+    item.className="menu-item clickable";
+    item.innerHTML=`<b>${nama}</b><br>Total Jam : ${jam}<br>Total Gaji : ${gaji}`;
+    item.onclick=()=>k.scrollIntoView({behavior:"smooth"});
+    menu.appendChild(item);
+
+    // MENU BAWAH (REKAP FINAL)
+    const total=document.createElement("div");
+    total.className="menu-item";
+    total.innerHTML=`<b>${nama}</b><br>Total Jam : ${jam}<br>Total Gaji : ${gaji}`;
+    menuTotal.appendChild(total);
   });
 }
 
-// ===== ABSEN PAGE (READ ONLY) =====
-function renderAbsen(){
-  pageAbsen.innerHTML=`<h1>PT ATMB<br><small>ABSEN</small></h1>`;
+btnTambah.onclick=()=>tambahKaryawan("Karyawan Baru");
+document.body.addEventListener("input",hitung);
+document.body.addEventListener("change",()=>{refreshTanggal();hitung();});
 
-  data.forEach(k=>{
-    let t=`<div class="card">
-      <h2>${k.nama}</h2>
-      <table>
-      <tr>
-        <th>Hari</th>
-        <th>Jam Masuk</th>
-        <th>Jam Keluar</th>
-      </tr>`;
-    k.hari.forEach((h,hi)=>{
-      t+=`
-      <tr>
-        <td>${hari[hi%7]}</td>
-        <td><input class="readonly" value="${h.jm}:${h.mm}" readonly></td>
-        <td><input class="readonly" value="${h.jk}:${h.mk}" readonly></td>
-      </tr>`;
-    });
-    t+=`</table></div>`;
-    pageAbsen.innerHTML+=t;
-  });
-}
-
-// ===== DATA SYNC =====
-window.ubah=function(k,h,f,v){
-  data[k].hari[h][f]=v;
-  renderAbsen(); // langsung update ABSEN
-};
-
-// ===== MENU SWITCH =====
-btnPayroll.onclick=()=>{
-  pagePayroll.style.display="block";
-  pageAbsen.style.display="none";
-  btnPayroll.classList.add("active");
-  btnAbsen.classList.remove("active");
-};
-btnAbsen.onclick=()=>{
-  pagePayroll.style.display="none";
-  pageAbsen.style.display="block";
-  btnAbsen.classList.add("active");
-  btnPayroll.classList.remove("active");
-};
-
-// ===== ADD KARYAWAN =====
-window.tambah=function(){
-  data.push({
-    nama:"Karyawan "+(data.length+1),
-    hari:[...Array(14)].map(()=>({jm:"",mm:"",jk:"",mk:""}))
-  });
-  renderPayroll();
-  renderAbsen();
-};
-
-renderPayroll();
-renderAbsen();
+tanggalMulai.value=new Date().toISOString().split("T")[0];
+for(let i=1;i<=3;i++) tambahKaryawan("Karyawan "+i);
 
 });
 </script>
